--- a/pom.xml
+++ b/pom.xml
@@ -26,22 +26,21 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.zookeeper</groupId>
-			<artifactId>zookeeper</artifactId>
-			<version>3.4.5</version>
-		</dependency>
-		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
 		
+    <dependency>
+      <groupId>org.apache.zookeeper</groupId>
+      <artifactId>zookeeper</artifactId>
+      <version>3.4.5</version>
+    </dependency>
 		<dependency>
-			<groupId>com.netflix.curator</groupId>
-			<artifactId>curator-recipes</artifactId>
-			<version>1.3.3</version>
+		  <groupId>org.apache.curator</groupId>
+		  <artifactId>curator-recipes</artifactId>
+		  <version>2.3.0</version>
 		</dependency>
-		            
 
 		<dependency>
 			<groupId>eu.stratosphere</groupId>
@@ -55,6 +54,7 @@
 			<version>0.4-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
+  
 	</dependencies>
 
 </project>
